--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -26,7 +26,7 @@ services:
     mem_limit: 64M
     memswap_limit: 64m
     volumes:
-      - ./src/main/resources/nginx/iparapheur.develop.conf:/etc/nginx/conf.d/iparapheur.conf
+      - ./src/main/resources/nginx/iparapheur.develop.conf.template:/etc/nginx/templates/iparapheur.conf.template
       - ./src/main/resources/nginx/ssl/:/etc/nginx/ssl/
 
 
