--- a/.env
+++ b/.env
@@ -16,8 +16,13 @@
 
 # https://docs.docker.com/compose/environment-variables/
 
-APPLICATION_URL=iparapheur.dom.local
+# APPLICATION_URL=iparapheur.dom.local
+APPLICATION_URL=iparapheur-test.dom.local
 
+POSTGRES_URL=postgres
 KEYCLOAK_URL=keycloak
 KEYCLOAK_REALM=api
 KEYCLOAK_CLIENT_ID=ipcore-web
+VAULT_UNSEAL_KEY=<unseal_key>
+VAULT_TOKEN=<token>
+MATOMO_TOKEN=<token>
