--- a/.env
+++ b/.env
@@ -16,10 +16,11 @@
 
 # https://docs.docker.com/compose/environment-variables/
 
-APPLICATION_URL=iparapheur.dom.local
+APPLICATION_PROTOCOL=http
+APPLICATION_HOST=iparapheur-test.dom.local
 
-POSTGRES_URL=postgres
-KEYCLOAK_URL=keycloak
+POSTGRES_HOST=postgres
+KEYCLOAK_HOST=keycloak
 KEYCLOAK_REALM=api
 KEYCLOAK_CLIENT_ID=ipcore-web
 VAULT_UNSEAL_KEY=<unseal_key>
