--- a/src/main/resources/nginx/iparapheur.develop.conf.template
+++ b/src/main/resources/nginx/iparapheur.develop.conf.template
@@ -17,7 +17,7 @@
 server {
 
   listen 80;
-  server_name ${APPLICATION_URL};
+  server_name ${APPLICATION_HOST};
 
   # ssl on;
   # ssl_certificate /etc/nginx/ssl/iparapheur.dom.local.crt;
