--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
     volumes:
       - ./src/main/resources/core/sentry.properties:/sentry.properties
     external_links:
-      - nginx:iparapheur.dom.local
+      - nginx:${APPLICATION_HOST}
 
 
   web:
