--- a/.env.dist
+++ b/.env.dist
@@ -1,5 +1,11 @@
-LICATION_URL=http://iparapheur.dom.local
+APPLICATION_PROTOCOL=http
+APPLICATION_HOST=iparapheur.dom.local
+APPLICATION_URL=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}
 
-KEYCLOAK_URL=http://iparapheur.dom.local/auth
+AUTH_SERVER_URL=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}/auth
 KEYCLOAK_REALM=api
 KEYCLOAK_CLIENT_ID=ipcore-web
+
+VAULT_UNSEAL_KEY=<unseal_key>
+VAULT_TOKEN=<token>
+
