--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,8 +65,7 @@ services:
     env_file:
       - .env
     environment:
-      - VAULT_UNSEAL_KEY=${VAULT_UNSEAL_KEY}
-      - VAULT_TOKEN=${VAULT_TOKEN}
+      - POSTGRES_HOST=postgres
     depends_on:
       postgres:
         condition: service_healthy
@@ -77,7 +76,7 @@ services:
     volumes:
       - ./src/main/resources/core/sentry.properties:/sentry.properties
     external_links:
-      - nginx:iparapheur.dom.local
+      - nginx:${APPLICATION_HOST}
 
 
   web:
@@ -86,10 +85,10 @@ services:
     tty: true
     mem_limit: 64M
     environment:
-      - APPLICATION_URL=${APPLICATION_HOST}
-      - KEYCLOAK_URL=${AUTH_SERVER_URL}
-      - KEYCLOAK_REALM=${KEYCLOAK_REALM}
-      - KEYCLOAK_CLIENT_ID=${KEYCLOAK_CLIENT_ID}
+      - APPLICATION_URL=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}
+      - KEYCLOAK_URL=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}/auth
+      - KEYCLOAK_REALM
+      - KEYCLOAK_CLIENT_ID
 
 
   workflow:
@@ -222,8 +221,8 @@ services:
     tty: true
     mem_limit: 512M
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER
+      - POSTGRES_PASSWORD
       - DB_TO_CREATE=alfresco,flowable,${KEYCLOAK_DB_DATABASE},ipcore,quartz
     command: postgres -c max_connections=500 -c log_min_messages=LOG
     healthcheck:
@@ -254,8 +253,8 @@ services:
     env_file:
       - .env
     environment:
-      - KEYCLOAK_USER=${KEYCLOAK_USER}
-      - KEYCLOAK_PASSWORD=${KEYCLOAK_PASSWORD}
+      - KEYCLOAK_USER
+      - KEYCLOAK_PASSWORD
       - DB_VENDOR=postgres
       - DB_ADDR=postgres
       - DB_DATABASE=${KEYCLOAK_DB_DATABASE}
