Adding the pastell-connector service

--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -56,11 +56,16 @@ services:
       - 10080:8080
 
 
+  pastell-connector:
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/pastell-connector:tenancy
+    ports:
+      - 8002:8080
+
+
   external-signature-connector:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/external-signature-connector:develop
     ports:
       - 2757:8080
-
 
 
   crypto:
