--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -57,10 +57,18 @@ services:
     ports:
       - 10080:8080
 
+
+  pastell-connector:
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/pastell-connector:develop
+    ports:
+      - 8002:8080
+
+
   external-signature-connector:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/external-signature-connector:develop
     ports:
       - 2757:8080
+
 
   crypto:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-crypto:develop
@@ -89,7 +97,7 @@ services:
       - 8889:8080
 
 
-# Non-libriciel services
+  # Non-libriciel services
 
   alfresco:
     mem_limit: 1024M
