--- a/src/main/resources/nginx/iparapheur.develop.conf.template
+++ b/src/main/resources/nginx/iparapheur.develop.conf.template
@@ -53,6 +53,10 @@ server {
     proxy_pass http://host.docker.internal:9009/alfresco;
   }
 
+  location /pastell-connector {
+    proxy_pass http://host.docker.internal:8002/pastell-connector;
+  }
+
   location /external-signature-connector {
     proxy_pass http://host.docker.internal:2757/external-signature-connector;
   }
