--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,10 +66,12 @@ services:
     environment:
       - POSTGRES_HOST=postgres
       - MATOMO_TOKEN
+      - STATS_SERVICE_PROTOCOL
       - VAULT_UNSEAL_KEY
       - VAULT_TOKEN
-      - APPLICATION_PROTOCOL
+      - PUBLLIC_URL_PROTOCOL
       - APPLICATION_HOST
+      - KEYCLOAK_AUTH_PROTOCOL
       - KEYCLOAK_HOST=keycloak
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID
@@ -92,7 +94,7 @@ services:
     tty: true
     mem_limit: 64M
     environment:
-      - APPLICATION_URL=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}
+      - APPLICATION_URL=${PUBLLIC_URL_PROTOCOL}://${APPLICATION_HOST}
       - KEYCLOAK_URL=${KEYCLOAK_AUTH_PROTOCOL}://${APPLICATION_HOST}/auth
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID
