--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -69,7 +69,7 @@ services:
       - STATS_SERVICE_PROTOCOL
       - VAULT_UNSEAL_KEY
       - VAULT_TOKEN
-      - PUBLLIC_URL_PROTOCOL
+      - PUBLIC_URL_PROTOCOL
       - APPLICATION_HOST
       - KEYCLOAK_AUTH_PROTOCOL
       - KEYCLOAK_HOST=keycloak
