--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -94,7 +94,7 @@ services:
     tty: true
     mem_limit: 64M
     environment:
-      - APPLICATION_URL=${PUBLLIC_URL_PROTOCOL}://${APPLICATION_HOST}
+      - APPLICATION_URL=${PUBLIC_URL_PROTOCOL}://${APPLICATION_HOST}
       - KEYCLOAK_URL=${KEYCLOAK_AUTH_PROTOCOL}://${APPLICATION_HOST}/auth
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID
