--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -103,6 +103,12 @@ services:
       - 9090:8080
 
 
+  smtp:
+    image: tophfr/mailcatcher:0.6.5_3
+    ports:
+      - "1080:80"
+
+
   vault:
     ports:
       - 8200:8200
