Update keycloak login page with various fixes.
Including edge case handling in error template, missing message property,
stub css file

--- a/src/main/resources/keycloak/themes/iparapheur/login/theme.properties
+++ b/src/main/resources/keycloak/themes/iparapheur/login/theme.properties
@@ -4,4 +4,8 @@ logoMessage=Bienvenue sur la page de connexion iParapheur
 
 # Ce message est désactivé
 infoMessage=
+
+productActiveFooter=iparapheur
 productImage=iparapheur.svg
+productName=i parapheur
+productVersion=5.0.0 dev
