--- a/src/main/resources/keycloak/themes/libriciel/login/theme.properties
+++ b/src/main/resources/keycloak/themes/libriciel/login/theme.properties
@@ -4,6 +4,11 @@ styles=css/libriciel.min.css lib/components/fork-awesome/css/fork-awesome.min.cs
 locales=fr
 
 infoMessage=Ceci est le message d'information a afficher en haut de page
+
+productActiveFooter=
 productImage=product.svg
+productName=Application Libriciel
+productVersion=1.0.0
+
 logoImage=logo-ls.png
 logoMessage=Développons ensemble vos projets de demain
