--- a/src/main/resources/nginx/iparapheur.develop.conf.template
+++ b/src/main/resources/nginx/iparapheur.develop.conf.template
@@ -37,6 +37,10 @@ server {
     proxy_pass http://host.docker.internal:9090/auth;
   }
 
+  location /api/v1/query {
+    proxy_pass http://host.docker.internal:9091/api/v1/query;
+  }
+
   location /api {
     proxy_pass http://host.docker.internal:8080/api;
   }
