--- a/src/main/resources/prometheus/prometheus.yml
+++ b/src/main/resources/prometheus/prometheus.yml
@@ -1,6 +1,6 @@
 global:
   scrape_interval: 15s
-  evaluation_interval:
+  evaluation_interval: 15s
 
 scrape_configs:
   - job_name: 'core'
@@ -13,5 +13,5 @@ scrape_configs:
     scrape_interval: 5s
     metrics_path: '/crypto/actuator/prometheus'
     static_configs:
-      - targets: [ 'crypto:8085' ]
+      - targets: [ 'crypto:8080' ]
 
