fix branch compose

--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -31,7 +31,7 @@ services:
 
 
   core:
-    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-core:dashBoard
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-core:develop
     extra_hosts:
       - "${APPLICATION_HOST}:host-gateway"
     mem_limit: 512M
