--- a/src/main/resources/nginx/iparapheur.develop.conf.template
+++ b/src/main/resources/nginx/iparapheur.develop.conf.template
@@ -37,7 +37,7 @@ server {
     proxy_pass http://host.docker.internal:9090/auth;
   }
 
-  location /api/v1/query {
+  location /prometheus/api/v1/query {
     proxy_pass http://host.docker.internal:9091/api/v1/query;
   }
 
