--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -345,11 +345,14 @@ services:
       - ./src/main/resources/vault/policies:/vault/policies
       - ./data/vault/data:/vault/data
 
+
   prometheus:
     image: prom/prometheus
     restart: always
     volumes:
-      - ./src/main/resources/prometheus/:/etc/prometheus/
+      - ./src/main/resources/prometheus/alert.rules:/etc/prometheus/alert.rules
+      - ./src/main/resources/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
+
 
   grafana:
     image: grafana/grafana:6.7.2
