feat: Externalisations des certificats ssl

--- a/.env.dist
+++ b/.env.dist
@@ -19,6 +19,8 @@
 
 PUBLIC_URL_PROTOCOL=http
 APPLICATION_HOST=iparapheur.dom.local
+CERTIFICATE_FULLCHAIN_PATH=./data/nginx/ssl/fullchain.pem
+CERTIFICATE_PRIVKEY_PATH=./data/nginx/ssl/privkey.pem
 
 STATS_SERVICE_PROTOCOL=http
 
