--- a/src/main/resources/nginx/iparapheur.conf.template
+++ b/src/main/resources/nginx/iparapheur.conf.template
@@ -19,9 +19,9 @@ server {
   listen 80;
   server_name ${APPLICATION_HOST};
 
-  # ssl on;
-  # ssl_certificate /etc/nginx/ssl/iparapheur.dom.local.crt;
-  # ssl_certificate_key /etc/nginx/ssl/iparapheur.dom.local.key;
+  ssl on;
+  ssl_certificate /etc/nginx/ssl/fullchain.pem;
+  ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
   client_max_body_size 2000M;
   large_client_header_buffers 4 32k;
