--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -27,6 +27,9 @@ services:
     memswap_limit: 64m
     volumes:
       - ./src/main/resources/nginx/iparapheur.develop.conf.template:/etc/nginx/templates/iparapheur.conf.template
+    networks:
+      - ipng
+      - default
 
   core:
     image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-core:develop
@@ -38,10 +41,13 @@ services:
       - ./src/main/resources/core/application-dev.yml:/application.yml
     ports:
       - 8080:8080
+    networks:
+      - ipng
+      - default
 
 
   web:
-    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-web:develop
+    image: gitlab.libriciel.fr:4567/libriciel/pole-signature/i-parapheur-v5/ip-web:ipng-basic-usage
     mem_limit: 64m
     memswap_limit: 64m
     ports:
@@ -123,6 +129,9 @@ services:
     memswap_limit: 512m
     ports:
       - 9090:8080
+    networks:
+      - ipng
+      - default
 
 
   matomo:
@@ -136,6 +145,9 @@ services:
     memswap_limit: 64m
     ports:
       - 6379:6379
+    networks:
+      - ipng
+      - default
 
 
   smtp:
@@ -164,3 +176,7 @@ services:
     ports:
       - 1807:8080
 
+networks:
+  ipng:
+    external: true
+    name: ipngbusiness_ipng
