--- a/src/main/resources/nginx/iparapheur.develop.conf.template
+++ b/src/main/resources/nginx/iparapheur.develop.conf.template
@@ -95,6 +95,12 @@ server {
       proxy_pass http://host.docker.internal:8888/bl-xemwebviewer;
   }
 
+  location /ipng {
+    proxy_set_header X-Forwarded-Host $host:$server_port;
+    proxy_set_header X-Forwarded-Server $host;
+    proxy_pass http://host.docker.internal:8081/ipng;
+  }
+
   location /filetransfer/ {
       proxy_pass http://host.docker.internal:1807/;
   }
