add missing conf in env.dist

--- a/.env.dist
+++ b/.env.dist
@@ -16,6 +16,7 @@
 
 # https://docs.docker.com/compose/environment-variables/
 
+APPLICATION_PROTOCOL=http
 
 PUBLIC_URL_PROTOCOL=http
 APPLICATION_HOST=iparapheur.dom.local
