unecessary nginx conf removed, host added

--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -149,6 +149,8 @@ services:
       - 8200:8200
 
   prometheus:
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
     ports:
       - 9091:9090
     volumes:
