--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,7 +139,7 @@ services:
 
 
   pdf-stamp:
-    image: gitlab.libriciel.fr:4567/outils/pdf-stamp:develop
+    image: registry.libriciel.fr/signature/pdf-stamp:canary
     restart: always
     tty: true
     mem_limit: 256M
