reference develop branch on registry.libriciel.fr for pdf-stamp

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -139,7 +139,7 @@ services:
 
 
   pdf-stamp:
-    image: registry.libriciel.fr/signature/pdf-stamp:canary
+    image: registry.libriciel.fr/signature/pdf-stamp:develop
     restart: always
     tty: true
     mem_limit: 256M
