--- a/docker-compose.override.dev-linux.yml
+++ b/docker-compose.override.dev-linux.yml
@@ -139,8 +139,9 @@ services:
 
 
   smtp:
-    image: tophfr/mailcatcher:0.6.5_3
+    image: tophfr/mailcatcher:0.7.1
     ports:
+      - "1025:25"
       - "1080:80"
 
 
