--- a/docker-compose.override.dev-macos.yml
+++ b/docker-compose.override.dev-macos.yml
@@ -101,8 +101,8 @@ services:
   keycloak:
     ports:
       - "9090:8080"
-    environment:
-      - KEYCLOAK_LOGLEVEL=DEBUG
+    # environment:
+    #   - KEYCLOAK_LOGLEVEL=DEBUG
 
 
   smtp:
