--- a/.env.dist
+++ b/.env.dist
@@ -17,31 +17,36 @@
 # https://docs.docker.com/compose/environment-variables/
 
 APPLICATION_PROTOCOL=http
-
-PUBLIC_URL_PROTOCOL=http
 APPLICATION_HOST=iparapheur.dom.local
 CERTIFICATE_FULLCHAIN_PATH=./data/nginx/ssl/fullchain.pem
 CERTIFICATE_PRIVKEY_PATH=./data/nginx/ssl/privkey.pem
 
-STATS_SERVICE_PROTOCOL=http
-
-VAULT_UNSEAL_KEY=<token>
-VAULT_TOKEN=<token>
-
+POSTGRES_HOST=postgres
+POSTGRES_PORT=5432
 POSTGRES_USER=root
 POSTGRES_PASSWORD=libriciel2k18
 
-KEYCLOAK_HOST=keycloak
-KEYCLOAK_REALM=api
-KEYCLOAK_CLIENT_ID=ipcore-web
 KEYCLOAK_AUTH_PROTOCOL=http
-
+KEYCLOAK_HOST=keycloak
+KEYCLOAK_PORT=8080
+KEYCLOAK_REALM=api
+KEYCLOAK_CLIENT_ID=ipcore-api
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=admin
 KEYCLOAK_DB_DATABASE=keycloak
 KEYCLOAK_DB_USER=keycloak
 KEYCLOAK_DB_PASSWORD=keycloak
 
+CONTENT_HOST=alfresco
+CONTENT_PORT=8080
+
+SECRET_PROTOCOL=http
+SECRET_HOST=vault
+SECRET_PORT=8200
+VAULT_UNSEAL_KEY=<token>
+VAULT_TOKEN=<token>
+
+STATS_SERVICE_PROTOCOL=http
 MATOMO_TOKEN=<token>
 MATOMO_DB_ROOT_PASSWORD=libriciel2k18
 MATOMO_DB_DATABASE=matomo
