--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -65,17 +65,25 @@ services:
     tty: true
     mem_limit: 256M
     environment:
-      - POSTGRES_HOST=postgres
+      - POSTGRES_HOST
+      - POSTGRES_PORT
+      - CONTENT_HOST
+      - CONTENT_PORT
       - MATOMO_TOKEN
       - STATS_SERVICE_PROTOCOL
       - VAULT_UNSEAL_KEY
       - VAULT_TOKEN
-      - PUBLIC_URL_PROTOCOL
+      - APPLICATION_PROTOCOL
       - APPLICATION_HOST
       - KEYCLOAK_AUTH_PROTOCOL
-      - KEYCLOAK_HOST=keycloak
+      - KEYCLOAK_HOST
+      - KEYCLOAK_PORT
+      - KEYCLOAK_DB_DATABASE
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID
+      - SECRET_PROTOCOL
+      - SECRET_HOST
+      - SECRET_PORT
     depends_on:
       postgres:
         condition: service_healthy
@@ -95,7 +103,7 @@ services:
     tty: true
     mem_limit: 64M
     environment:
-      - APPLICATION_URL=${PUBLIC_URL_PROTOCOL}://${APPLICATION_HOST}
+      - APPLICATION_URL=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}
       - KEYCLOAK_URL=${KEYCLOAK_AUTH_PROTOCOL}://${APPLICATION_HOST}/auth
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID
@@ -174,12 +182,12 @@ services:
                   -XX:+UseContainerSupport
                   -Ddeployment.method=DOCKER_COMPOSE
 
-                  -Ddb.driver=org.postgresql.Driver
-                  -Ddb.username=alfresco
-                  -Ddb.password=alfresco
-                  -Ddb.url=jdbc:postgresql://postgres:5432/alfresco
-                  -Dalfresco.host=alfresco
-                  -Dalfresco.port=8080
+          -Ddb.driver=org.postgresql.Driver
+          -Ddb.username=alfresco
+          -Ddb.password=alfresco
+          -Ddb.url=jdbc:postgresql://postgres:5432/alfresco
+          -Dalfresco.host=alfresco
+          -Dalfresco.port=8080
                   -Dalf.root=/var/lib/alfresco
 
                   -Dsolr.host=solr6
@@ -189,12 +197,12 @@ services:
                   -Dindex.subsystem.name=solr6
 
                   -Dheartbeat.enabled=false
-                  -Dtransform.service.enabled=false
+          -Dtransform.service.enabled=false
                   -Dlocal.transform.service.enabled=false
                   -Dlegacy.transform.service.enabled=false
                   -Dmessaging.subsystem.autoStart=false
                   -Dsystem.workflow.engine.activiti.enabled=false
-                  "
+          "
     depends_on:
       postgres:
         condition: service_healthy
