separate keycloak's web client from api client in env

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -108,7 +108,7 @@ services:
       - APPLICATION_URL=${APPLICATION_PROTOCOL}://${APPLICATION_HOST}
       - KEYCLOAK_URL=${KEYCLOAK_AUTH_PROTOCOL}://${APPLICATION_HOST}/auth
       - KEYCLOAK_REALM
-      - KEYCLOAK_CLIENT_ID
+      - KEYCLOAK_CLIENT_ID=${KEYCLOAK_WEB_CLIENT_ID}
 
 
   workflow:
@@ -285,6 +285,7 @@ services:
     environment:
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID
+      - KEYCLOAK_WEB_CLIENT_ID
       - KEYCLOAK_CLIENT_SECRET
       - KEYCLOAK_USER
       - KEYCLOAK_PASSWORD
