--- a/.env.dist
+++ b/.env.dist
@@ -33,6 +33,7 @@ KEYCLOAK_HOST=keycloak
 KEYCLOAK_PORT=8080
 KEYCLOAK_REALM=api
 KEYCLOAK_CLIENT_ID=ipcore-api
+KEYCLOAK_WEB_CLIENT_ID=ipcore-web
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=admin
 KEYCLOAK_DB_DATABASE=keycloak
