Missing vars (thx)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -81,6 +81,8 @@ services:
       - KEYCLOAK_HOST
       - KEYCLOAK_PORT
       - KEYCLOAK_DB_DATABASE
+      - KEYCLOAK_DB_USER
+      - KEYCLOAK_DB_PASSWORD
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID
       - SECRET_PROTOCOL
