MR fix : reverting to "public" registry

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,7 +151,7 @@ services:
 
 
   pdf-stamp:
-    image: gitlab.libriciel.fr:4567/outils/pdf-stamp:develop
+    image: registry.libriciel.fr/signature/pdf-stamp:develop
     restart: always
     tty: true
     mem_limit: 256M
