More env resources

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -85,6 +85,10 @@ services:
       - KEYCLOAK_DB_PASSWORD
       - KEYCLOAK_REALM
       - KEYCLOAK_CLIENT_ID
+      - KEYCLOAK_CLIENT_SECRET
+      - KEYCLOAK_WEB_CLIENT_ID
+      - WORKFLOW_HOST
+      - WORKFLOW_PORT
       - SECRET_PROTOCOL
       - SECRET_HOST
       - SECRET_PORT
