--- a/src/main/resources/nginx/iparapheur.develop.conf.template
+++ b/src/main/resources/nginx/iparapheur.develop.conf.template
@@ -59,6 +59,10 @@ server {
     proxy_pass http://host.docker.internal:2757/external-signature-connector;
   }
 
+  location /legacy-bridge/ws {
+    proxy_pass http://host.docker.internal:2758/ws;
+  }
+
   location /pdf-stamp {
     proxy_pass http://host.docker.internal:8889/pdf-stamp;
   }
