--- a/src/main/resources/nginx/iparapheur.develop.conf.template
+++ b/src/main/resources/nginx/iparapheur.develop.conf.template
@@ -59,7 +59,7 @@ server {
     proxy_pass http://host.docker.internal:2757/external-signature-connector;
   }
 
-  location /legacy-bridge/ws {
+  location /ws-iparapheur {
     proxy_pass http://host.docker.internal:2758/ws;
   }
 
