--- a/.env.dist
+++ b/.env.dist
@@ -33,6 +33,7 @@ KEYCLOAK_HOST=keycloak
 KEYCLOAK_PORT=8080
 KEYCLOAK_REALM=api
 KEYCLOAK_CLIENT_ID=ipcore-api
+KEYCLOAK_CLIENT_SECRET=<random-uuid>
 KEYCLOAK_WEB_CLIENT_ID=ipcore-web
 KEYCLOAK_USER=admin
 KEYCLOAK_PASSWORD=admin
@@ -42,6 +43,9 @@ KEYCLOAK_DB_PASSWORD=keycloak
 
 CONTENT_HOST=alfresco
 CONTENT_PORT=8080
+
+WORKFLOW_HOST=workflow
+WORKFLOW_PORT=8080
 
 SECRET_PROTOCOL=http
 SECRET_HOST=vault
