--- a/src/main/resources/nginx/iparapheur.conf.template
+++ b/src/main/resources/nginx/iparapheur.conf.template
@@ -18,10 +18,9 @@
 
 server {
 
-  listen 80;
+  listen 443 ssl;
   server_name ${APPLICATION_HOST};
 
-  ssl on;
   ssl_certificate /etc/nginx/ssl/fullchain.pem;
   ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
