--- a/src/main/resources/nginx/iparapheur.conf.template
+++ b/src/main/resources/nginx/iparapheur.conf.template
@@ -34,15 +34,11 @@ server {
   proxy_http_version 1.1;
 
   location /auth {
-    resolver 127.0.0.11 valid=30s;
-    set $upstream_keycloak keycloak;
-    proxy_pass http://$upstream_keycloak:8080/auth;
+    proxy_pass http://keycloak:8080/auth;
   }
 
   location /api {
-    resolver 127.0.0.11 valid=30s;
-    set $upstream_core core;
-    proxy_pass http://$upstream_core:8080/api;
+    proxy_pass http://core:8080/api;
   }
 
   location /crypto {
@@ -118,13 +114,11 @@ server {
   # }
 
   location ^~ / {
-    resolver 127.0.0.11 valid=30s;
-    set $upstream_web web;
-    proxy_pass http://$upstream_web:80/;
+    proxy_pass http://web:80/;
   }
 
   location ^~ /sockjs-node {
-    proxy_pass http://$upstream_web:80/sockjs-node;
+    proxy_pass http://web:80/sockjs-node;
   }
 
 }
